# qwen-image-optimizations

./: README.md  requirements.txt
src/: infer.py  pipeline.py  transformer.py
src/caching/: adacache.py  qwen_h2cache.py
src/flash_attention/cute/: blackwell_helpers.py  block_sparse_utils.py  cute_dsl_utils.py  flash_bwd.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sm100.py  flash_bwd_sm90.py  flash_fwd.py  interface.py  (+8 more)
src/kernels/: __init__.py  fused_fp8_quant_v5.py  fused_kernels.py  fused_kernels_v2.py  fused_kernels_v3.py
src/models/: __init__.py  fused_qkv_fp8.py  optimized_block_v14.py  optimized_block_v15.py  transformer.py  transformer_rowwise_fp8.py
src/mxfp8_ext/: build_ext.py  mxfp8_ext.cu  mxfp8_ext_bindings.cpp  mxfp8v6_bindings.cpp
src/quack/: README.md  pyproject.toml
src/quack/benchmarks/: benchmark_cross_entropy.py  benchmark_gemm_sm90.py  benchmark_softmax.py  benchmark_topk.py
src/quack/quack/: __init__.py  broadcast_utils.py  copy_utils.py  cross_entropy.py  gemm.py  gemm_act.py  gemm_dact.py  gemm_default_epi.py  gemm_interface.py  gemm_sm100.py  gemm_sm90.py  gemm_symmetric.py  gemm_wrapper_utils.py  layout_utils.py  linear.py  reduce.py  reduction_base.py  rmsnorm.py  softmax.py  tile_scheduler.py  topk.py  utils.py  varlen_utils.py
src/quack/quack/sort/: bitonic_sort.py  utils.py
src/quack/tests/: test_cross_entropy.py  test_layernorm.py  test_linear.py  test_linear_varlen_k.py  test_linear_varlen_m.py  test_rmsnorm.py  test_softmax.py  test_symmetric_gemm.py  test_topk.py
src/utils/: patch_rms_trans.py
