[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quack-kernels"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "nvidia-cutlass-dsl>=4.4.0.dev1",
    "torch",
    "apache-tvm-ffi>=0.1.6,<0.2",
    "torch-c-dlpack-ext",
]

[project.optional-dependencies]
cu13 = ["nvidia-cutlass-dsl[cu13]>=4.4.0.dev1"]
dev = [
    "pre-commit",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quack*"]

[tool.setuptools.dynamic]
version = {attr = "quack.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E741",  # Do not use variables named 'I', 'O', or 'l'
    "F841",  # local variable is assigned to but never used
]